[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/GameOverScreen.gd" id="1_gameover"]

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_gameover")

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
text = "Game Over"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
text = ""
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]

[node name="StatsLabel" type="Label" parent="Panel/VBox"]
text = ""
theme_override_font_sizes/font_size = 8

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
alignment = 1
theme_override_constants/separation = 8

[node name="NewRunButton" type="Button" parent="Panel/VBox/Buttons"]
text = "New Run"
theme_override_font_sizes/font_size = 9

[node name="QuitButton" type="Button" parent="Panel/VBox/Buttons"]
text = "Quit"
theme_override_font_sizes/font_size = 9
